# swarm-drone-atc

./: .dockerignore  .gitignore  .zenodo.json  0x80073712.txt  API_IMPLEMENTATION.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DEPLOY_PAGES.bat  DEPLOY_README.md  Dockerfile  Dockerfile.gpu  Dockerfile.reproducible  LICENSE  PROTOTYPE_FRAMEWORK.md  README.md  ROADMAP.md  SECURITY.md  [캡스톤 디자인 및 사업 투자 유치용 종합 보고서].txt  _c.bat  _check.js  _deploy_pages.bat  _diff.bat  _filelist.txt  _m.bat  _r.bat  cmd.ps1  demo_simulation.py  docker-compose.gpu.yml  docker-compose.reproducible.yml  docker-compose.yaml  docker-compose.yml  gen_presentation_v7.py  gen_report_v6.py  gen_report_v7_easy.py  main.py  patch_report_images.py  push_restore.bat  pyproject.toml  (+17 more)
.claude/: launch.json  settings.json  settings.local.json  update-changelog.py
.github/: copilot-instructions.md
api/: fastapi_server.py  server.py
automation/: __init__.py  collect_external.py  collect_sim.py  pipeline.py  process.py  store.py
benchmarks/: CITATION.bib  DATASET_CARD.md  LICENSE  README.md
chatbot/: __init__.py  app.py  llm_atc_interface.py  simulator.py
config/: airspace_zones.yaml  custom_test.json  default_simulation.yaml  drone_profiles.yaml  extreme_test.yaml  monte_carlo.yaml  pipeline_config.yaml
deployment/: deploy_azure.py  deploy_multi_cloud.py  kubernetes_config.py
docker/: README.md
docs/: 404.html  AUDIT_2026-04-20.md  CNAME.example  MASTER_TODO_ATC.md  OPS_TRAFFIC_RED_ANALYSIS_2026-05-03.md  PERMALINK_GUIDE.md  README.md  REGRESSION_NOTES_2026-04-26.md  REPRODUCIBILITY.md  RUFF_AUDIT_2026-05-03.md  SDACS_Capstone_Presentation.pptx  TASK_LIST_2026-04-25.md  WORK_BACKUP_2026-04-02.md  _RESUME_STATUS_20260421.md  _config.yml  architecture.md  faq.md  go.html  gpu_benchmark_report.md  handout.html  index.html  index.html.bak_20260420  manifest.webmanifest  midterm_presentation_script.md  presentation_script.md  rehearsal_script.md  roadmap_public.md  robots.txt  scenarios.html  site.webmanifest  sitemap.xml  swarm_3d_simulator.html  swarm_3d_simulator_v2.html  test-report.html  user_manual.md
notebooks/: tutorial.ipynb
requirements/: base.txt  dev.txt  physics.txt  simulation.txt  visualization.txt
scripts/: benchmark_gpu.py  demo.py  demo_showcase.py  generate_charts.py  generate_docx.js  generate_latex_tables.py  generate_pptx.js  run_one_scenario.py  save_screenshot_server.js  setup-gpg-signing.sh
simulation/: __init__.py  ab_test_framework.py  ab_testing.py  access_control.py  acoustic_communication.py  acoustic_sensing.py  adaptive_comm_protocol.py  adaptive_control_system.py  adaptive_sampling.py  adaptive_tuner.py  adsb_receiver.py  advanced_analytics.py  advanced_path_planner.py  adversarial_defense.py  adversarial_robustness.py  adversarial_swarm_game.py  adversarial_weather_gen.py  aero_acoustic_v2.py  agent_negotiation.py  ai_inference_engine.py  airspace_capacity.py  airspace_heatmap.py  airspace_history.py  airspace_predictor.py  airspace_reservation.py  airspace_weather_integration.py  alert_management_system.py  altitude_control_system.py  altitude_manager.py  analytics.py  anomaly_autoencoder.py  anomaly_detector_isolation.py  anomaly_federated_detector.py  ar_vr_bridge.py  audit_trail.py  autoML_pipeline.py  auto_landing_system.py  auto_mission_planner.py  auto_scaler.py  autonomous_fleet_composer.py  (+421 more)
src/: airspace_manager.py  boids_swarm.py  sensor_fusion.py
tests/: conftest.py  test_ab_testing.py  test_airspace_controller.py  test_airspace_controller_comprehensive.py  test_analytics.py  test_apf.py  test_apf_comprehensive.py  test_apf_engine_fallback.py  test_apf_property.py  test_callback_logging.py  test_cbs.py  test_cbs_comprehensive.py  test_chatbot_engine.py  test_chatbot_simulator.py  test_comm_bus.py  test_comm_bus_comprehensive.py  test_coordinate_systems.py  test_core_analytics.py  test_core_functions.py  test_coverage_boost.py  test_coverage_boost_2.py  test_coverage_boost_3.py  test_coverage_boost_4.py  test_coverage_boost_5.py  test_dashboard.py  test_drone_profiles.py  test_drone_state.py  (+71 more)
(+420 files in other folders)
