[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "swarm-drone-atc"
version = "0.1.0"
description = "군집드론 공역통제 자동화 시스템 (SDACS)"
authors = [
    {name = "jangsunwoo", email = "sun475300@gmail.com"}
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "simpy>=4.1",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "dash>=2.17",
    "plotly>=5.20",
    "joblib>=1.3",
    "tqdm>=4.66",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
sdacs = "main:main"

[project.urls]
Repository = "https://github.com/sun475300-sudo/swarm-drone-atc"
Demo = "https://heartfelt-axolotl-2f9af2.netlify.app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
