[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-drone-atc"
version = "0.1.0"
description = "군집드론 공역통제 자동화 시스템 (SDACS)"
authors = [
    {name = "jangsunwoo", email = "sun475300@gmail.com"}
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "simpy>=4.1",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "dash>=2.17",
    "plotly>=5.20",
    "joblib>=1.3",
    "tqdm>=4.66",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.0",
    "mypy>=1.10",
]
gpu = [
    "torch>=2.0",
]

[project.scripts]
sdacs = "main:main"

[project.urls]
Repository = "https://github.com/sun475300-sudo/swarm-drone-atc"
Demo = "https://heartfelt-axolotl-2f9af2.netlify.app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov=simulation --cov-report=term-missing"
markers = [
    "unit: 단위 테스트 (개별 함수/클래스)",
    "integration: 통합 테스트 (다중 모듈 상호작용)",
    "e2e: End-to-End 테스트 (전체 시뮬레이션 파이프라인)",
    "slow: 느린 테스트 (>10초)",
    "gpu: GPU 가속 테스트",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false
exclude = ["tests/", "archive/", "visualization/"]

[[tool.mypy.overrides]]
module = ["simulation.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["src.airspace_control.controller.airspace_controller"]
ignore_errors = true

# src.hardware.* — pymavlink 의존이 conditional이라 self.master가 Optional.
# Phase 691~700 (실기 통합) 완료 후 형식 검증 재활성화 예정.
[[tool.mypy.overrides]]
module = ["src.hardware.*"]
ignore_errors = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
